Добавление нового класса DateLabelFormatter для форматирования дат; обновление интерфейса MainFrame для изменения размера окна; добавление зависимости jdatepicker в pom.xml; рефакторинг RoomRepository и UserRepository для упрощения методов; улучшение обработки ошибок в AuthController; добавление метода поиска комнат в RoomController; замена текстового поля типа номера на комбобокс в ManagerAddRoomPanel.